<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.graphbi</groupId>
	<artifactId>rdb2graph</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<ddlutils-version>1.1</ddlutils-version>
		<log4j-version>1.2.17</log4j-version>
		<mysql-version>5.1.23</mysql-version>
		<neo4j-version>2.0.1</neo4j-version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>org.apache.ddlutils</groupId>
			<artifactId>ddlutils</artifactId>
			<version>${ddlutils-version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql-version}</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j</artifactId>
			<version>${neo4j-version}</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-kernel</artifactId>
			<version>${neo4j-version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j-version}</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.3.2</version>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-server</argument>
						<argument>-XX:+UseConcMarkSweepGC</argument>
						<argument>-d64</argument>
						<argument>-Xmx2048m</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>org.graphbi.rdb2graph.RDB2Graph</argument>
						<!-- <argument>-r</argument> -->
						<!-- <argument>erpnext-sample-ddl.xml</argument> -->
						<!-- <argument>-a</argument> -->
						<!-- <argument>grand_total</argument> -->
					</arguments>
					<!-- <arguments> -->
					<!-- <argument>config.xml</argument> -->
					<!-- </arguments> -->
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
